--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
 		"format": "biome check --write"
 	},
 	"dependencies": {
-		"vue": "^3.5.12"
+		"element-plus": "^2.8.7",
+		"vue": "^3.5.12",
+		"vue-router": "4"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@types/node": "^22.9.0",
 		"@vitejs/plugin-vue": "^5.1.4",
+		"sass": "^1.80.7",
+		"sass-embedded": "^1.80.7",
 		"typescript": "~5.6.2",
+		"unplugin-auto-import": "^0.18.4",
+		"unplugin-vue-components": "^0.27.4",
 		"vite": "^5.4.10",
 		"vue-tsc": "^2.1.8"
 	}
