--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"format": "biome check --write"
 	},
 	"dependencies": {
+		"@element-plus/icons-vue": "^2.3.1",
+		"@vueuse/core": "^11.2.0",
 		"element-plus": "^2.8.7",
 		"vue": "^3.5.12",
 		"vue-router": "4"
