--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@element-plus/icons-vue": "^2.3.1",
 		"@vueuse/core": "^11.2.0",
 		"element-plus": "^2.8.7",
+		"pinia": "^2.2.6",
+		"pinia-plugin-persistedstate": "^4.1.3",
 		"vue": "^3.5.12",
 		"vue-router": "4"
 	},
