--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	},
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.3.1",
+		"@types/crypto-js": "^4.2.2",
 		"@vueuse/core": "^11.2.0",
+		"crypto-js": "^4.2.0",
 		"element-plus": "^2.8.7",
 		"pinia": "^2.2.6",
 		"pinia-plugin-persistedstate": "^4.1.3",
