--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@element-plus/icons-vue": "^2.3.1",
 		"@types/crypto-js": "^4.2.2",
 		"@vueuse/core": "^11.2.0",
+		"alova": "^3.2.4",
 		"crypto-js": "^4.2.0",
 		"element-plus": "^2.8.7",
 		"pinia": "^2.2.6",
