refactor(login): 重构登录模块
- 修改了登录相关的 API 和 Store 结构
- 优化了登录表单的验证逻辑
- 调整了登录数据的处理方式
- 移除了不必要的 console.log 语句

--- a/biome.json
+++ b/biome.json
@@ -24,7 +24,7 @@
 		"rules": {
 			"recommended": true,
 			"suspicious": {
-				"noExplicitAny": "error",
+				"noExplicitAny": "warn",
 				"noConsoleLog": "warn"
 			},
 			"style": {
@@ -34,7 +34,8 @@
 			},
 			"complexity": {
 				"noForEach": "warn",
-				"useOptionalChain": "error"
+				"useOptionalChain": "error",
+				"useArrowFunction":"warn"
 			}
 		}
 	},
