feat(user): 实现用户登录和信息展示功能
- 新增用户登录 API 和相关类型定义
- 实现用户信息获取和存储逻辑
- 添加用户头像和信息展示组件
- 集成验证码功能
- 优化路由守卫，增加登录状态验证

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,8 @@
 {
 	"compilerOptions": {
+		"composite": true,
+
+
 		"paths": {
 			"@/*": ["./src/*"]
 		},
@@ -13,10 +16,9 @@
 
 		/* Bundler mode */
 		"moduleResolution": "Bundler",
-		"allowImportingTsExtensions": true,
 		"isolatedModules": true,
 		"moduleDetection": "force",
-		"noEmit": true,
+		"noEmit": false,
 		"jsx": "preserve",
 
 		/* Linting */
