--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,7 @@
 {
 	"compilerOptions": {
+		"composite": true,
+
 		"incremental": true,
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 		"target": "ES2022",
@@ -12,7 +14,7 @@
 		"allowImportingTsExtensions": true,
 		"isolatedModules": true,
 		"moduleDetection": "force",
-		"noEmit": true,
+		"noEmit": false,
 
 		/* Linting */
 		"strict": true,
