feat(user): 添加验证码功能并优化登录模块
- 在 .env.development 中更新了 TURNIP_WALLPAPER_URL 为本地地址
- 在 components.d.ts 中添加了 ElImage 组件的类型定义
- 在 user/login/types/index.d.ts 中增加了验证码相关的类型定义
- 在 user/login/index.ts 中实现了验证码获取和验证的 API 接口- 在 user/index.ts 中集成了验证码相关功能
- 在 src/utils/index.ts 中添加了新的工具函数 showErrors
- 在 login 组件中集成了验证码功能，优化了登录界面和逻辑
- 更新了 package.json，添加了 uuid 和 js-base64 依赖
- 在 tsconfig.node.json 中注释掉了 allowImportingTsExtensions 配置项
- 在 user.d.ts 中添加了 ICaptchaType 类型定义
- 在 user.login.ts 中实现了验证码获取和状态管理功能

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,7 +11,7 @@
 
 		/* Bundler mode */
 		"moduleResolution": "Bundler",
-		"allowImportingTsExtensions": true,
+		/*"allowImportingTsExtensions": true,*/
 		"isolatedModules": true,
 		"moduleDetection": "force",
 		"noEmit": false,
