--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-VITE_TURNIP_WALLPAPER_URL="http://192.168.1.70:8033"
+#VITE_TURNIP_WALLPAPER_URL="http://192.168.1.70:8033"
+VITE_TURNIP_WALLPAPER_URL="http://localhost:8033"
