--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-	"name": "turnip-vue3",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "vue-tsc -b && vite build",
-		"preview": "vite preview",
-		"format": "biome check --write"
-	},
-	"dependencies": {
-		"@element-plus/icons-vue": "^2.3.1",
-		"@types/crypto-js": "^4.2.2",
-		"@vueuse/core": "^11.2.0",
-		"alova": "^3.2.4",
-		"crypto-js": "^4.2.0",
-		"element-plus": "^2.8.7",
-		"pinia": "^2.2.6",
-		"pinia-plugin-persistedstate": "^4.1.3",
-		"vue": "^3.5.12",
-		"vue-router": "4"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@types/node": "^22.9.0",
-		"@vitejs/plugin-vue": "^5.1.4",
-		"sass": "^1.80.7",
-		"sass-embedded": "^1.80.7",
-		"typescript": "~5.6.2",
-		"unplugin-auto-import": "^0.18.4",
-		"unplugin-vue-components": "^0.27.4",
-		"vite": "^5.4.10",
-		"vue-tsc": "^2.1.8"
-	}
+  "name": "turnip-vue3",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview",
+    "format": "biome check --write"
+  },
+  "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@types/crypto-js": "^4.2.2",
+    "@vueuse/core": "^11.2.0",
+    "alova": "^3.2.4",
+    "crypto-js": "^4.2.0",
+    "element-plus": "^2.8.7",
+    "js-base64": "^3.7.7",
+    "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^4.1.3",
+    "uuid": "^11.1.0",
+    "vue": "^3.5.12",
+    "vue-router": "4"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "@types/node": "^22.9.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "sass": "^1.80.7",
+    "sass-embedded": "^1.80.7",
+    "typescript": "~5.6.2",
+    "unplugin-auto-import": "^0.18.4",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.10",
+    "vue-tsc": "^2.1.8"
+  }
 }
