feat(system): 初始化系统模块
- 新增系统模块路由和页面组件
- 实现用户登录和权限控制
- 添加系统菜单和用户管理功能
- 优化验证码获取和展示
- 调整菜单组件属性和样式

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+		"types": ["vue", "node"],
 		"baseUrl": ".",
 		"paths": {
 			"@/*": [
@@ -18,6 +19,7 @@
 	],
 	"include": [
 		"env.d.ts",
+		"element-puls.d.ts",
 		"auto-imports.d.ts",
 		"src/**/*",
 		"src/**/*.vue"
